--- a/synergy/mx/static/styl/index.styl
+++ b/synergy/mx/static/styl/index.styl
@@ -1,6 +1,8 @@
 $body-font-size = 1.4rem
 $btn-font-size = 0.8rem
 $btn-font-size-icons = 1.1rem
+$btn-min-width = 6.5rem
+$btn-width = minmax(auto, max-content)
 
 @import './helpers.styl'
 @import './colors.styl'
