--- a/synergy/mx/static/styl/mx.styl
+++ b/synergy/mx/static/styl/mx.styl
@@ -96,7 +96,8 @@ for i in 1..10
 .action_button
   font-size $btn-font-size
   display inline-block
-  min-width 86px
+  // min-width $btn-min-width
+  width $btn-width
   padding 0px 6px
   margin 2px
   border-color $color-5
