--- a/synergy/mx/static/styl/ui.styl
+++ b/synergy/mx/static/styl/ui.styl
@@ -124,6 +124,7 @@ a
     height 2.5rem
     padding 2px 5px
     margin-right 0.5rem
+    flex-grow 1
 
   button
     height 2.5rem
@@ -131,6 +132,8 @@ a
     opacity 0.75
     padding 0 6px
     min-width 4rem
+    width minmax(auto, max-content)
+    flex-shrink 0
 
     i
       opacity 0.8
