--- a/synergy/mx/templates/block_context_menu.html
+++ b/synergy/mx/templates/block_context_menu.html
@@ -30,6 +30,9 @@
                 <i class="fa fa-repeat"></i>&nbsp;Reprocess
             </a>
         </li>
+        <li class="mouse-event">
+            X: <span class="mouse-event-x"></span>, Y: <span class="mouse-event-y"></span>
+        </li>
     </ul>
 </div>
 <script type="text/javascript" src="{{ url_for('static', file='js/context_menu.js') }}"></script>
