--- a/synergy/mx/templates/object_viewer.html
+++ b/synergy/mx/templates/object_viewer.html
@@ -15,10 +15,10 @@
     </head>
 
     <body>
-        <div class="container">
-            <pre id="json"></pre>
+        <div class="container u-full-width">
+            <pre id="json" class="m-2"></pre>
 
-            <form style="text-align: center">
+            <form class="text-align-center bg-white u-full-width" >
                 <button type="button" class="action_button btn-center" onclick="window.close()"><i
                         class="fa">&#xf00d;</i><span>Close</span></button>
             </form>
