--- a/synergy/mx/static/css/index.css
+++ b/synergy/mx/static/css/index.css
@@ -1,238 +1,269 @@
 .inline {
-  display: inline;
+  display: inline !important;
 }
 .inline-flex {
-  display: inline-flex;
+  display: inline-flex !important;
+}
+.fixed-bottom {
+  position: fixed !important;
+  bottom: 0 !important;
+  align-content: center;
+  margin-bottom: 0 !important;
+}
+.bg-white {
+  background-color: #fff !important;
+}
+.justify {
+  display: flex;
+  justify-content: space-between !important;
+  width: 100% !important;
+}
+.auto-width {
+  width: minmax(auto, max-content) !important;
+  min-width: auto !important;
+  max-width: auto !important;
+}
+.text-align-left {
+  text-align: left !important;
+}
+.text-align-right {
+  text-align: right !important;
+}
+.text-align-center {
+  text-align: center !important;
+}
+.text-align-justify {
+  text-align: justify !important;
 }
 .p-0 {
-  padding: 0rem;
+  padding: 0rem !important;
 }
 .px-0 {
-  padding-left: 0rem;
-  padding-right: 0rem;
+  padding-left: 0rem !important;
+  padding-right: 0rem !important;
 }
 .py-0 {
-  padding-top: 0rem;
-  padding-bottom: 0rem;
+  padding-top: 0rem !important;
+  padding-bottom: 0rem !important;
 }
 .pl-0 {
-  padding-left: 0rem;
+  padding-left: 0rem !important;
 }
 .pr-0 {
-  padding-right: 0rem;
+  padding-right: 0rem !important;
 }
 .pt-0 {
-  padding-top: 0rem;
+  padding-top: 0rem !important;
 }
 .pb-0 {
-  padding-bottom: 0rem;
+  padding-bottom: 0rem !important;
 }
 .m-0 {
-  margin: 0rem;
+  margin: 0rem !important;
 }
 .mx-0 {
-  margin-left: 0rem;
-  margin-right: 0rem;
+  margin-left: 0rem !important;
+  margin-right: 0rem !important;
 }
 .my-0 {
-  margin-top: 0rem;
-  margin-bottom: 0rem;
+  margin-top: 0rem !important;
+  margin-bottom: 0rem !important;
 }
 .ml-0 {
-  margin-left: 0rem;
+  margin-left: 0rem !important;
 }
 .mr-0 {
-  margin-right: 0rem;
+  margin-right: 0rem !important;
 }
 .mt-0 {
-  margin-top: 0rem;
+  margin-top: 0rem !important;
 }
 .mb-0 {
-  margin-bottom: 0rem;
+  margin-bottom: 0rem !important;
 }
 .p-1 {
-  padding: 1rem;
+  padding: 1rem !important;
 }
 .px-1 {
-  padding-left: 1rem;
-  padding-right: 1rem;
+  padding-left: 1rem !important;
+  padding-right: 1rem !important;
 }
 .py-1 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  padding-top: 1rem !important;
+  padding-bottom: 1rem !important;
 }
 .pl-1 {
-  padding-left: 1rem;
+  padding-left: 1rem !important;
 }
 .pr-1 {
-  padding-right: 1rem;
+  padding-right: 1rem !important;
 }
 .pt-1 {
-  padding-top: 1rem;
+  padding-top: 1rem !important;
 }
 .pb-1 {
-  padding-bottom: 1rem;
+  padding-bottom: 1rem !important;
 }
 .m-1 {
-  margin: 1rem;
+  margin: 1rem !important;
 }
 .mx-1 {
-  margin-left: 1rem;
-  margin-right: 1rem;
+  margin-left: 1rem !important;
+  margin-right: 1rem !important;
 }
 .my-1 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+  margin-top: 1rem !important;
+  margin-bottom: 1rem !important;
 }
 .ml-1 {
-  margin-left: 1rem;
+  margin-left: 1rem !important;
 }
 .mr-1 {
-  margin-right: 1rem;
+  margin-right: 1rem !important;
 }
 .mt-1 {
-  margin-top: 1rem;
+  margin-top: 1rem !important;
 }
 .mb-1 {
-  margin-bottom: 1rem;
+  margin-bottom: 1rem !important;
 }
 .p-2 {
-  padding: 2rem;
+  padding: 2rem !important;
 }
 .px-2 {
-  padding-left: 2rem;
-  padding-right: 2rem;
+  padding-left: 2rem !important;
+  padding-right: 2rem !important;
 }
 .py-2 {
-  padding-top: 2rem;
-  padding-bottom: 2rem;
+  padding-top: 2rem !important;
+  padding-bottom: 2rem !important;
 }
 .pl-2 {
-  padding-left: 2rem;
+  padding-left: 2rem !important;
 }
 .pr-2 {
-  padding-right: 2rem;
+  padding-right: 2rem !important;
 }
 .pt-2 {
-  padding-top: 2rem;
+  padding-top: 2rem !important;
 }
 .pb-2 {
-  padding-bottom: 2rem;
+  padding-bottom: 2rem !important;
 }
 .m-2 {
-  margin: 2rem;
+  margin: 2rem !important;
 }
 .mx-2 {
-  margin-left: 2rem;
-  margin-right: 2rem;
+  margin-left: 2rem !important;
+  margin-right: 2rem !important;
 }
 .my-2 {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
+  margin-top: 2rem !important;
+  margin-bottom: 2rem !important;
 }
 .ml-2 {
-  margin-left: 2rem;
+  margin-left: 2rem !important;
 }
 .mr-2 {
-  margin-right: 2rem;
+  margin-right: 2rem !important;
 }
 .mt-2 {
-  margin-top: 2rem;
+  margin-top: 2rem !important;
 }
 .mb-2 {
-  margin-bottom: 2rem;
+  margin-bottom: 2rem !important;
 }
 .p-3 {
-  padding: 3rem;
+  padding: 3rem !important;
 }
 .px-3 {
-  padding-left: 3rem;
-  padding-right: 3rem;
+  padding-left: 3rem !important;
+  padding-right: 3rem !important;
 }
 .py-3 {
-  padding-top: 3rem;
-  padding-bottom: 3rem;
+  padding-top: 3rem !important;
+  padding-bottom: 3rem !important;
 }
 .pl-3 {
-  padding-left: 3rem;
+  padding-left: 3rem !important;
 }
 .pr-3 {
-  padding-right: 3rem;
+  padding-right: 3rem !important;
 }
 .pt-3 {
-  padding-top: 3rem;
+  padding-top: 3rem !important;
 }
 .pb-3 {
-  padding-bottom: 3rem;
+  padding-bottom: 3rem !important;
 }
 .m-3 {
-  margin: 3rem;
+  margin: 3rem !important;
 }
 .mx-3 {
-  margin-left: 3rem;
-  margin-right: 3rem;
+  margin-left: 3rem !important;
+  margin-right: 3rem !important;
 }
 .my-3 {
-  margin-top: 3rem;
-  margin-bottom: 3rem;
+  margin-top: 3rem !important;
+  margin-bottom: 3rem !important;
 }
 .ml-3 {
-  margin-left: 3rem;
+  margin-left: 3rem !important;
 }
 .mr-3 {
-  margin-right: 3rem;
+  margin-right: 3rem !important;
 }
 .mt-3 {
-  margin-top: 3rem;
+  margin-top: 3rem !important;
 }
 .mb-3 {
-  margin-bottom: 3rem;
+  margin-bottom: 3rem !important;
 }
 .p-4 {
-  padding: 4rem;
+  padding: 4rem !important;
 }
 .px-4 {
-  padding-left: 4rem;
-  padding-right: 4rem;
+  padding-left: 4rem !important;
+  padding-right: 4rem !important;
 }
 .py-4 {
-  padding-top: 4rem;
-  padding-bottom: 4rem;
+  padding-top: 4rem !important;
+  padding-bottom: 4rem !important;
 }
 .pl-4 {
-  padding-left: 4rem;
+  padding-left: 4rem !important;
 }
 .pr-4 {
-  padding-right: 4rem;
+  padding-right: 4rem !important;
 }
 .pt-4 {
-  padding-top: 4rem;
+  padding-top: 4rem !important;
 }
 .pb-4 {
-  padding-bottom: 4rem;
+  padding-bottom: 4rem !important;
 }
 .m-4 {
-  margin: 4rem;
+  margin: 4rem !important;
 }
 .mx-4 {
-  margin-left: 4rem;
-  margin-right: 4rem;
+  margin-left: 4rem !important;
+  margin-right: 4rem !important;
 }
 .my-4 {
-  margin-top: 4rem;
-  margin-bottom: 4rem;
+  margin-top: 4rem !important;
+  margin-bottom: 4rem !important;
 }
 .ml-4 {
-  margin-left: 4rem;
+  margin-left: 4rem !important;
 }
 .mr-4 {
-  margin-right: 4rem;
+  margin-right: 4rem !important;
 }
 .mt-4 {
-  margin-top: 4rem;
+  margin-top: 4rem !important;
 }
 .mb-4 {
-  margin-bottom: 4rem;
+  margin-bottom: 4rem !important;
 }
 html,
 body {
@@ -352,6 +383,7 @@ a.nav-item.active {
   height: 2.5rem;
   padding: 2px 5px;
   margin-right: 0.5rem;
+  flex-grow: 1;
 }
 .process-form button {
   height: 2.5rem;
@@ -359,6 +391,8 @@ a.nav-item.active {
   opacity: 0.75;
   padding: 0 6px;
   min-width: 4rem;
+  width: minmax(auto, max-content);
+  flex-shrink: 0;
 }
 .process-form button i {
   opacity: 0.8;
@@ -493,7 +527,7 @@ input[type="button"] {
 .action_button {
   font-size: 0.8rem;
   display: inline-block;
-  min-width: 86px;
+  width: minmax(auto, max-content);
   padding: 0px 6px;
   margin: 2px;
   border-color: #333;
