--- a/synergy/mx/templates/dashboard_managed.html
+++ b/synergy/mx/templates/dashboard_managed.html
@@ -1,20 +1,20 @@
 {% extends 'main_header.html' %}
 {% block body %}
 
-<div class="page-title-bar">
-    {% import 'block_enable_auto_refresh.html' as block_enable_refresh %}
-    {{ block_enable_refresh.enable_auto_refresh() }}
-</div>
+    <div class="page-title-bar">
+        {% import 'block_enable_auto_refresh.html' as block_enable_refresh %}
+        {{ block_enable_refresh.enable_auto_refresh() }}
+    </div>
 
-<div class="container u-full-width">
-    {% import 'block_time_window_selector.html' as block_time_window %}
-    {{ block_time_window.time_window_selector(details, 2) }}
+    <div class="container u-full-width">
+        {% import 'block_time_window_selector.html' as block_time_window %}
+        {{ block_time_window.time_window_selector(details, 2) }}
 
-    <table class="table-entries context-menu synergy-datatable" id="dashboard_table">
-        <thead>
+        <table class="table-entries context-menu synergy-datatable" id="dashboard_table">
+            <thead>
             <tr class="table-entries-header">
                 <th scope="col">
-                    <input type="checkbox" name="select_all" onclick="toggleAllCheckboxes(this)" />
+                    <input type="checkbox" name="select_all" onclick="toggleAllCheckboxes(this)"/>
                 </th>
                 <th scope="col">Process Name</th>
                 <th scope="col">Timeperiod</th>
@@ -24,55 +24,59 @@
                 <th scope="col"></th> <!-- Event Log -->
                 <th scope="col"></th> <!-- Workflow -->
             </tr>
-        </thead>
-        <tbody>
+            </thead>
+            <tbody>
 
             {%- for process_name, job_entry in details.managed.items() -%}
-            <tr class="{{ job_entry.state }}">
-                {% set value = "{ process_name: '" + job_entry.process_name + "', timeperiod: '" + job_entry.timeperiod + "' }" %}
-                <td><input type="checkbox" name="batch_processing" value="{{ value }}" /></td>
-                <td>{{ job_entry.process_name }}</td>
-                <td>{{ job_entry.timeperiod }}</td>
-                <td>{{ job_entry.state }}</td>
-                <td>
-                    {% set url = 'action=managed/uow' + '&process_name=' + job_entry.process_name + '&timeperiod=' + job_entry.timeperiod %}
-                    <form class="table-form" method="GET" onsubmit="window.open('/viewer/object/?{{ url }}','View Uow',
-                'toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth / 2},height=${window.innerHeight * 0.85}'); return false;">
-                        <button type="submit" class="action_button btn-center" title="Workflow"><i class="fa">&#xf1c9;</i>
-                            <span>View Uow</span></button>
-                    </form>
-                </td>
-                <td>
-                    {% set url = 'action=managed/log/uow' + '&process_name=' + job_entry.process_name + '&timeperiod=' + job_entry.timeperiod %}
-                    <form class="table-form" method="GET" onsubmit="window.open('/viewer/object/?{{ url }}','Uow Log',
-                'toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth / 2},height=${window.innerHeight * 0.85}'); return false;">
-                        <button type="submit" class="action_button btn-center" title="Workflow"><i class="fa">&#xf0f6;</i>
-                            <span>Uow Log</span></button>
-                    </form>
-                </td>
-                <td>
-                    {% set url = 'action=managed/log/event' + '&process_name=' + job_entry.process_name + '&timeperiod=' + job_entry.timeperiod %}
-                    <form class="table-form" method="GET" onsubmit="window.open('/viewer/object/?{{ url }}','Event Log',
-                'toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth / 2},height=${window.innerHeight * 0.85}'); return false;">
-                        <button type="submit" class="action_button btn-center" title="Workflow"><i class="fa">&#xf00b;</i>
-                            <span>Event Log</span></button>
-                    </form>
-                </td>
-                <td>
-                    {% set url = 'action=flow/flow/details' + '&process_name=' + job_entry.process_name + '&timeperiod=' + job_entry.timeperiod + '&unit_of_work_type=type_managed' %}
-                    <form class="table-form" method="GET" onsubmit="window.open('/viewer/flow/?{{ url }}','Workflow',
-                'toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth / 2},height=${window.innerHeight * 0.85}'); return false;">
-                        <button type="submit" class="action_button btn-center" title="Workflow"><i class="fa">&#xf074;</i>
-                            <span>Workflow</span></button>
-                    </form>
-                </td>
-            </tr>
+                <tr class="{{ job_entry.state }}">
+                    {% set value = "{ process_name: '" + job_entry.process_name + "', timeperiod: '" + job_entry.timeperiod + "' }" %}
+                    <td><input type="checkbox" name="batch_processing" value="{{ value }}"/></td>
+                    <td>{{ job_entry.process_name }}</td>
+                    <td>{{ job_entry.timeperiod }}</td>
+                    <td>{{ job_entry.state }}</td>
+                    <td>
+                        {% set url = 'action=managed/uow' + '&process_name=' + job_entry.process_name + '&timeperiod=' + job_entry.timeperiod %}
+                        <form class="table-form" method="GET"
+                              onsubmit="window.open('/viewer/object/?{{ url }}','View Uow',
+                                      'toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth / 2},height=${window.innerHeight * 0.85}'); return false;">
+                            <button type="submit" class="action_button btn-center" title="Workflow">
+                                <i class="fa fa-file-code-o"></i><span>View Uow</span></button>
+                        </form>
+                    </td>
+                    <td>
+                        {% set url = 'action=managed/log/uow' + '&process_name=' + job_entry.process_name + '&timeperiod=' + job_entry.timeperiod %}
+                        <form class="table-form" method="GET"
+                              onsubmit="window.open('/viewer/object/?{{ url }}','Uow Log',
+                                      'toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth / 2},height=${window.innerHeight * 0.85}'); return false;">
+                            <button type="submit" class="action_button btn-center" title="Workflow">
+                                <i class="fa fa-file-text-o"></i><span>Uow Log</span></button>
+                        </form>
+                    </td>
+                    <td>
+                        {% set url = 'action=managed/log/event' + '&process_name=' + job_entry.process_name + '&timeperiod=' + job_entry.timeperiod %}
+                        <form class="table-form" method="GET"
+                              onsubmit="window.open('/viewer/object/?{{ url }}','Event Log',
+                                      'toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth / 2},height=${window.innerHeight * 0.85}'); return false;">
+                            <button type="submit" class="action_button btn-center" title="Workflow">
+                                <i class="fa fa-th-list"></i><span>Event Log</span></button>
+                        </form>
+                    </td>
+                    <td>
+                        {% set url = 'action=flow/flow/details' + '&process_name=' + job_entry.process_name + '&timeperiod=' + job_entry.timeperiod + '&unit_of_work_type=type_managed' %}
+                        <form class="table-form" method="GET"
+                              onsubmit="window.open('/viewer/flow/?{{ url }}','Workflow',
+                                      'toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth / 2},height=${window.innerHeight * 0.85}'); return false;">
+                            <button type="submit" class="action_button btn-center" title="Workflow">
+                                <i class="fa fa-random"></i><span>Workflow</span></button>
+                        </form>
+                    </td>
+                </tr>
             {%- endfor -%}
 
-        </tbody>
-    </table>
-    {% import 'block_context_menu.html' as context_menu %}
-    {{ context_menu.job_menu() }}
-</div>
+            </tbody>
+        </table>
+        {% import 'block_context_menu.html' as context_menu %}
+        {{ context_menu.job_menu() }}
+    </div>
 
 {% endblock %}
