--- a/synergy/mx/templates/scheduler_freerun_entries.html
+++ b/synergy/mx/templates/scheduler_freerun_entries.html
@@ -1,18 +1,18 @@
 {% extends 'main_header.html' %}
 {% block body %}
 
-<div class="page-title-bar">
-    <!-- <h2>scheduler freerun entries</h2> -->
-    {% import 'block_enable_auto_refresh.html' as block_enable_refresh %}
-    {{ block_enable_refresh.enable_auto_refresh() }}
-</div>
+    <div class="page-title-bar">
+        <!-- <h2>scheduler freerun entries</h2> -->
+        {% import 'block_enable_auto_refresh.html' as block_enable_refresh %}
+        {{ block_enable_refresh.enable_auto_refresh() }}
+    </div>
 
-<div class="u-max-full-width freerun-container">
+    <div class="u-max-full-width freerun-container">
 
-    <table class="u-full-width table-entries context-menu">
-        <thead>
+        <table class="u-full-width table-entries context-menu">
+            <thead>
             <tr class="table-entries-header">
-                <th scope="col"><input type="checkbox" name="select_all" onclick="toggleAllCheckboxes(this)" /> </th>
+                <th scope="col"><input type="checkbox" name="select_all" onclick="toggleAllCheckboxes(this)"/></th>
                 <th scope="col" class="pl-1">Trigger On/Alive</th>
                 <th scope="col">Process Name</th>
                 <th scope="col">Entry Name</th>
@@ -23,104 +23,104 @@
                 <th scope="col"></th> <!-- View Uow --><!-- Uow Log --><!-- Event Log -->
                 <th scope="col"></th> <!-- Cancel Uow --><!-- Edit -->
             </tr>
-        </thead>
-        <tbody>
+            </thead>
+            <tbody>
 
             {%- for row in details.freerun_entries %}
-            {%- set tr_class = '' -%}
+                {%- set tr_class = '' -%}
                 {%- if row.is_on != row.is_alive -%}
                     {%- set tr_class = 'state_inconsistent' -%}
                 {%- elif not row.is_alive -%}
                     {%- set tr_class = 'state_inactive' -%}
                 {%- endif -%}
-            <tr class="{{ tr_class }}">
-                <td>
-                    {% set value = "{ process_name: '" + row.process_name + "', entry_name: '" + row.entry_name + "' }" %}
-                    <input type="checkbox" name="batch_processing" value="{{ value }}" />
-                </td>
-                <td class="pl-1">{{ row.is_on }} / {{ row.is_alive }}</td>
-                <td>{{ row.process_name }}</td>
-                <td>{{ row.entry_name }}</td>
-                <td>
-                    <form class="table-form" method="POST" action="/freerun/entry/interval/">
-                        <input type="hidden" name="process_name" value="{{ row.process_name }}" />
-                        <input type="hidden" name="entry_name" value="{{ row.entry_name }}" />
-                        <input type="text" size="8" maxlength="32" name="interval"
-                            value="{{ row.trigger_frequency }}" />
-                        <button type="submit" class="action_button btn-icons btn-center" title="Apply"><i
-                                class="fa">&#xf00c;</i></button>
-                    </form>
-                </td>
-                <td>
-                    <form class="table-form" method="POST" action="/freerun/entry/trigger/">
-                        <input type="hidden" name="process_name" value="{{ row.process_name }}" />
-                        <input type="hidden" name="entry_name" value="{{ row.entry_name }}" />
-                        <button type="submit" class="action_button btn-center" title="Trigger"><i
-                                class="fa fa-bolt"></i><span>Trigger</span></button>
-                    </form>
-                </td>
+                <tr class="{{ tr_class }}">
+                    <td>
+                        {% set value = "{ process_name: '" + row.process_name + "', entry_name: '" + row.entry_name + "' }" %}
+                        <input type="checkbox" name="batch_processing" value="{{ value }}"/>
+                    </td>
+                    <td class="pl-1">{{ row.is_on }} / {{ row.is_alive }}</td>
+                    <td>{{ row.process_name }}</td>
+                    <td>{{ row.entry_name }}</td>
+                    <td>
+                        <form class="table-form" method="POST" action="/freerun/entry/interval/">
+                            <input type="hidden" name="process_name" value="{{ row.process_name }}"/>
+                            <input type="hidden" name="entry_name" value="{{ row.entry_name }}"/>
+                            <input type="text" size="8" maxlength="32" name="interval"
+                                   value="{{ row.trigger_frequency }}"/>
+                            <button type="submit" class="action_button btn-icons btn-center" title="Apply">
+                                <i class="fa fa-check"></i></button>
+                        </form>
+                    </td>
+                    <td>
+                        <form class="table-form" method="POST" action="/freerun/entry/trigger/">
+                            <input type="hidden" name="process_name" value="{{ row.process_name }}"/>
+                            <input type="hidden" name="entry_name" value="{{ row.entry_name }}"/>
+                            <button type="submit" class="action_button btn-center" title="Trigger">
+                                <i class="fa fa-bolt"></i><span>Trigger</span></button>
+                        </form>
+                    </td>
 
-                <td>{{ row.next_run_in }}</td>
-                <td style="max-width: 180px">{{ row.arguments|jsonify }}</td>
-                <td class="button-col">
-                    {% set url = 'action=freerun/uow' + '&process_name=' + row.process_name + '&entry_name=' + row.entry_name %}
-                    <form class="table-form inline" method="GET"
-                        onsubmit="window.open('/viewer/object/?{{ url }}','View Uow',
-                    `toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth / 2},height=${window.innerHeight * 0.85}`); return false;">
-                        <button type="submit" class="action_button btn-icons btn-center" title="View Uow"><i
-                                class="fa">&#xf1c9;</i><span>Uow</span></button>
-                    </form>
+                    <td>{{ row.next_run_in }}</td>
+                    <td style="max-width: 180px">{{ row.arguments|jsonify }}</td>
+                    <td class="button-col">
+                        {% set url = 'action=freerun/uow' + '&process_name=' + row.process_name + '&entry_name=' + row.entry_name %}
+                        <form class="table-form inline" method="GET"
+                              onsubmit="window.open('/viewer/object/?{{ url }}','View Uow',
+                                      `toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth / 2},height=${window.innerHeight * 0.85}`); return false;">
+                            <button type="submit" class="action_button btn-icons btn-center" title="View Uow">
+                                <i class="fa fa-file-code-o"></i><span>Uow</span></button>
+                        </form>
 
-                    {% set url = 'action=freerun/log/uow' + '&process_name=' + row.process_name + '&entry_name=' + row.entry_name %}
-                    <form class="table-form inline" method="GET"
-                        onsubmit="window.open('/viewer/object/?{{ url }}','Uow Log',
-                    `toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth / 2},height=${window.innerHeight * 0.85}`); return false;">
-                        <button type="submit" class="action_button btn-icons btn-center" title="Log Uow"><i
-                                class="fa">&#xf0f6;</i><span>Log Uow</span></button>
-                    </form>
+                        {% set url = 'action=freerun/log/uow' + '&process_name=' + row.process_name + '&entry_name=' + row.entry_name %}
+                        <form class="table-form inline" method="GET"
+                              onsubmit="window.open('/viewer/object/?{{ url }}','Uow Log',
+                                      `toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth / 2},height=${window.innerHeight * 0.85}`); return false;">
+                            <button type="submit" class="action_button btn-icons btn-center" title="Log Uow">
+                                <i class="fa fa-file-text-o"></i><span>Log Uow</span></button>
+                        </form>
 
-                    {% set url = 'action=freerun/log/event' + '&process_name=' + row.process_name + '&entry_name=' + row.entry_name %}
-                    <form class="table-form inline" method="GET"
-                        onsubmit="window.open('/viewer/object/?{{ url }}','Event Log',
-                    `toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth / 2},height=${window.innerHeight * 0.85}`); return false;">
-                        <button type="submit" class="action_button btn-icons btn-center" title="Event Uow"><i
-                                class="fa">&#xf00b;</i><span>Event Log</span></button>
-                    </form>
-                </td>
-                <td class="button-col">
-                    <form class="table-form inline" method="GET" action="/freerun/uow/cancel/">
-                        <input type="hidden" name="process_name" value="{{ row.process_name }}" />
-                        <input type="hidden" name="entry_name" value="{{ row.entry_name }}" />
-                        <button type="submit" class="action_button btn-icons btn-center" title="Cancel Uow"><i
-                                class="fa">&#xf00d;</i><span>Cancel</span></button>
-                    </form>
+                        {% set url = 'action=freerun/log/event' + '&process_name=' + row.process_name + '&entry_name=' + row.entry_name %}
+                        <form class="table-form inline" method="GET"
+                              onsubmit="window.open('/viewer/object/?{{ url }}','Event Log',
+                                      `toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth / 2},height=${window.innerHeight * 0.85}`); return false;">
+                            <button type="submit" class="action_button btn-icons btn-center" title="Event Uow">
+                                <i class="fa fa-th-list"></i><span>Event Log</span></button>
+                        </form>
+                    </td>
+                    <td class="button-col">
+                        <form class="table-form inline" method="GET" action="/freerun/uow/cancel/">
+                            <input type="hidden" name="process_name" value="{{ row.process_name }}"/>
+                            <input type="hidden" name="entry_name" value="{{ row.entry_name }}"/>
+                            <button type="submit" class="action_button btn-icons btn-center" title="Cancel Uow">
+                                <i class="fa fa-remove"></i><span>Cancel</span></button>
+                        </form>
 
-                    {% set url = '/viewer/schedulable/?process_name=' + row.process_name + '&entry_name=' + row.entry_name + '&is_new_entry=False'%}
-                    <form class="table-form inline" method="GET"
-                        onsubmit="window.open('{{ url }}','Edit Freerun Trigger',
-                    `toolbar=no,scrollbars=yes,resizable=yes,left=${window.innerWidth * 0.15},width=${window.innerWidth / 2},height=${window.innerHeight * 0.85}`); return false;">
-                        <button type="submit" class="action_button btn-icons btn-center" title="Edit"><i
-                                class="fa">&#xf044;</i><span>Edit</span></button>
-                    </form>
-                </td>
-            </tr>
+                        {% set url = '/viewer/schedulable/?process_name=' + row.process_name + '&entry_name=' + row.entry_name + '&is_new_entry=False' %}
+                        <form class="table-form inline" method="GET"
+                              onsubmit="window.open('{{ url }}','Edit Freerun Trigger',
+                                      `toolbar=no,scrollbars=yes,resizable=yes,left=${window.innerWidth * 0.15},width=${window.innerWidth / 2},height=${window.innerHeight * 0.85}`); return false;">
+                            <button type="submit" class="action_button btn-icons btn-center" title="Edit">
+                                <i class="fa fa-edit"></i><span>Edit</span></button>
+                        </form>
+                    </td>
+                </tr>
             {%- endfor %}
 
             <tr>
                 <td colspan="13" style="text-align: right">
-                    {% set url = '/viewer/schedulable/?is_new_entry=True'%}
+                    {% set url = '/viewer/schedulable/?is_new_entry=True' %}
                     <a href="#"
-                        onclick="window.open('{{ url }}','New Freerun Trigger',
-                    `toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth / 2},height=${window.innerHeight * 0.85}`); return false;">
+                       onclick="window.open('{{ url }}','New Freerun Trigger',
+                               `toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth / 2},height=${window.innerHeight * 0.85}`); return false;">
                         <i class="fa fa-plus"></i><span>&nbsp;Add New Freerun Trigger</span>
                     </a>
                 </td>
             </tr>
 
-        </tbody>
-    </table>
-</div>
-{% import 'block_context_menu.html' as context_menu %}
-{{ context_menu.trigger_menu(true) }}
+            </tbody>
+        </table>
+    </div>
+    {% import 'block_context_menu.html' as context_menu %}
+    {{ context_menu.trigger_menu(true) }}
 
 {% endblock %}
