Fixed context menu position bug!! Scrolling object viewer
The context menu being rendered inside the container element caused the offset.

Show scrollbars on object/log viewer

Other minor UI improvements including button / hover styles, dataTable styles,

--- a/synergy/mx/static/styl/context_menu.styl
+++ b/synergy/mx/static/styl/context_menu.styl
@@ -1,11 +1,11 @@
 .context_menu_show
-    z-index 1000
+    // z-index 1000
     position absolute
     background-color $cm-color-1
     border 1px solid $cm-color-2
     border-radius 3px
     padding 1px
-    display block
+    // display block
     margin 0
     list-style none
     color $cm-color-3
