--- a/synergy/mx/templates/object_viewer.html
+++ b/synergy/mx/templates/object_viewer.html
@@ -15,8 +15,8 @@
     </head>
 
     <body>
-        <div class="container u-full-width">
-            <pre id="json" class="m-2"></pre>
+        <div class="u-full-width px-2 pt-2">
+            <pre id="json" class="u-full-width contain scroll-x scroll-y"></pre>
 
             <form class="text-align-center bg-white u-full-width" >
                 <button type="button" class="action_button btn-center" onclick="window.close()"><i
