--- a/synergy/mx/templates/dashboard_freeruns.html
+++ b/synergy/mx/templates/dashboard_freeruns.html
@@ -36,7 +36,7 @@
                     {% set url = 'action=freerun/uow' + '&process_name=' + uow_entry.process_name + '&entry_name=' + uow_entry.entry_name %}
                     <form class="table-form" method="GET" onsubmit="window.open('/viewer/object/?{{ url }}','View Uow',
                     `toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth / 2},height=${window.innerHeight * 0.85}`); return false;">
-                        <button type="submit" class="action_button fa-input" title="Workflow"><i class="fa">&#xf1c9;</i>
+                        <button type="submit" class="action_button fa-input" title="Workflow"><i class="fa fa-file-code-o"></i>
                             <span>View Uow</span></button>
                     </form>
                 </td>
@@ -44,7 +44,7 @@
                     {% set url = 'action=freerun/log/uow' + '&process_name=' + uow_entry.process_name + '&entry_name=' + uow_entry.entry_name %}
                     <form class="table-form" method="GET" onsubmit="window.open('/viewer/object/?{{ url }}','Uow Log',
                     `toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth / 2},height=${window.innerHeight * 0.85}`); return false;">
-                        <button type="submit" class="action_button fa-input" title="Workflow"><i class="fa">&#xf0f6</i>
+                        <button type="submit" class="action_button fa-input" title="Workflow"><i class="fa fa-file-text-o"></i>
                             <span>Uow Log</span></button>
                     </form>
                 </td>
@@ -54,7 +54,7 @@
                     `toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth / 2},height=${window.innerHeight * 0.85}`); return false;">
                         <input type="submit" class="action_button fa-input" title="Workflow"
                             value="&#xf074;&nbsp;Workflow" />
-                        <button type="submit" class="action_button fa-input" title="Workflow"><i class="fa">&#xf074;</i>
+                        <button type="submit" class="action_button fa-input" title="Workflow"><i class="fa fa-random"></i>
                             <span>Workflow</span></button>
                     </form>
                 </td>
