--- a/synergy/mx/templates/dashboard_managed.html
+++ b/synergy/mx/templates/dashboard_managed.html
@@ -38,7 +38,7 @@
                     {% set url = 'action=managed/uow' + '&process_name=' + job_entry.process_name + '&timeperiod=' + job_entry.timeperiod %}
                     <form class="table-form" method="GET" onsubmit="window.open('/viewer/object/?{{ url }}','View Uow',
                 `toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth * 2/3},height=${window.innerHeight * 0.85}`); return false;">
-                        <button type="submit" class="action_button btn-center" title="Workflow"><i class="fa">&#xf1c9;</i>
+                        <button type="submit" class="action_button btn-center" title="Workflow"><i class="fa fa-file-code-o"></i>
                             <span>View Uow</span></button>
                     </form>
                 </td>
@@ -46,7 +46,7 @@
                     {% set url = 'action=managed/log/uow' + '&process_name=' + job_entry.process_name + '&timeperiod=' + job_entry.timeperiod %}
                     <form class="table-form" method="GET" onsubmit="window.open('/viewer/object/?{{ url }}','Uow Log',
                 `toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth * 2/3},height=${window.innerHeight * 0.85}`); return false;">
-                        <button type="submit" class="action_button btn-center" title="Workflow"><i class="fa">&#xf0f6;</i>
+                        <button type="submit" class="action_button btn-center" title="Workflow"><i class="fa fa-file-text-o"></i>
                             <span>Uow Log</span></button>
                     </form>
                 </td>
@@ -54,7 +54,7 @@
                     {% set url = 'action=managed/log/event' + '&process_name=' + job_entry.process_name + '&timeperiod=' + job_entry.timeperiod %}
                     <form class="table-form" method="GET" onsubmit="window.open('/viewer/object/?{{ url }}','Event Log',
                 `toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth * 2/3},height=${window.innerHeight * 0.85}`); return false;">
-                        <button type="submit" class="action_button btn-center" title="Workflow"><i class="fa">&#xf00b;</i>
+                        <button type="submit" class="action_button btn-center" title="Workflow"><i class="fa fa-th-list"></i>
                             <span>Event Log</span></button>
                     </form>
                 </td>
@@ -62,7 +62,7 @@
                     {% set url = 'action=flow/flow/details' + '&process_name=' + job_entry.process_name + '&timeperiod=' + job_entry.timeperiod + '&unit_of_work_type=type_managed' %}
                     <form class="table-form" method="GET" onsubmit="window.open('/viewer/flow/?{{ url }}','Workflow',
                 `toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth * 2/3},height=${window.innerHeight * 0.85}`); return false;">
-                        <button type="submit" class="action_button btn-center" title="Workflow"><i class="fa">&#xf074;</i>
+                        <button type="submit" class="action_button btn-center" title="Workflow"><i class="fa fa-random"></i>
                             <span>Workflow</span></button>
                     </form>
                 </td>
