--- a/synergy/mx/templates/scheduler_managed_entries.html
+++ b/synergy/mx/templates/scheduler_managed_entries.html
@@ -43,7 +43,7 @@
                         <input type="text" size="8" maxlength="32" name="interval"
                             value="{{ row.trigger_frequency }}" />
                         <button type="submit" title="Apply" class="action_button btn-center"><i
-                                class="fa fa-bolt"></i><span>Apply</span></button>
+                                class="fa fa-check"></i><span>Apply</span></button>
                     </form>
                 </td>
                 <td>
@@ -72,14 +72,14 @@
                           onsubmit="refreshWithDelay()">
                         <span class="inline u-pull-right">
                             <button type="submit" class="action_button btn-center inline" title="Flush All"><i
-                                    class="fa">&#xf1b8;</i><span>Flush All</span></button>
+                                    class="fa fa-recycle"></i><span>Flush All</span></button>
                         </span>
                     </form>
                     <form class="table-form inline" method="GET" action="/gc/refresh/"
                           onsubmit="refreshWithDelay()">
                         <span class="inline u-pull-right">
                             <button type="submit" class="action_button btn-center inline" title="Refresh"><i
-                                    class="fa">&#xf021;</i><span>Refresh</span></button>
+                                    class="fa fa-refresh"></i><span>Refresh</span></button>
                         </span>
                     </form>
                 </th>
@@ -107,7 +107,7 @@
                         onsubmit="refreshWithDelay()">
                         <input type="hidden" name="process_name" value="{{ process_name }}" />
                         <button type="submit" class="action_button btn-center u-pull-right" title="Flush"><i
-                                class="fa">&#xf1b8;</i><span>Flush</span></button>
+                                class="fa fa-recycle"></i><span>Flush</span></button>
                     </form>
                 </td>
             </tr>
@@ -120,7 +120,7 @@
                 <td>Empty</td>
                 <td>
                     <button type="submit" disabled class="action_button btn-center disabled u-pull-right"
-                        title="Flush"><i class="fa">&#xf1b8;</i><span>Flush</span></button>
+                        title="Flush"><i class="fa fa-recycle"></i><span>Flush</span></button>
                 </td>
             </tr>
             {%- endif -%}
@@ -161,24 +161,24 @@
             <th scope="col" width="15%">Tail log</th>
             <th scope="col">
                 <form class="table-form" method="GET" onsubmit="window.open(`/viewer/object/?action=system/gc/log`,`GC Log`,`toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth * 2/3},height=${window.innerHeight * 0.85}`); return false;">
-                    <button type="submit" class="action_button btn-center" title="GC"><i class="fa">&#xf0f6;</i>
-                        <span>GC</span>
+                    <button type="submit" class="action_button btn-center" title="GC"><i class="fa fa-file-text-o"></i>
+                        <span>GC Log</span>
                     </button>
                 </form>
             </th>
             <th scope="col">
                 <form class="table-form" method="GET" onsubmit="window.open('/viewer/object/?action=system/mx/log','MX Log',
                         `toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth * 2/3},height=${window.innerHeight * 0.85}`); return false;">
-                    <button type="submit" class="action_button btn-center" title="MX"><i class="fa">&#xf0f6;</i>
-                        <span>MX</span>
+                    <button type="submit" class="action_button btn-center" title="MX"><i class="fa fa-file-text-o"></i>
+                        <span>MX Log</span>
                     </button>
                 </form>
             </th>
             <th scope="col">
                 <form class="table-form" method="GET" onsubmit="window.open('/viewer/object/?action=system/scheduler/log','Scheduler Log',
                         `toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth * 2/3},height=${window.innerHeight * 0.85}`); return false;">
-                    <button type="submit" class="action_button btn-center" title="Scheduler"><i class="fa">&#xf0f6;</i>
-                        <span>Scheduler</span>
+                    <button type="submit" class="action_button btn-center" title="Scheduler"><i class="fa fa-file-text-o"></i>
+                        <span>Scheduler Log</span>
                     </button>
                 </form>
             </th>
