--- a/synergy/mx/static/styl/_mx.styl
+++ b/synergy/mx/static/styl/_mx.styl
@@ -235,7 +235,7 @@ div
   &.state_inactive
     background-color lightgray
 
-// HACK: shrink the buttons to icons for smaller screens
+// shrink the buttons to icons for smaller screens
 @media (max-width:1290px)
   .btn-container
     grid-template-columns repeat(3, auto)
