--- a/synergy/mx/static/styl/index.styl
+++ b/synergy/mx/static/styl/index.styl
@@ -1,13 +1,9 @@
-$body-font-size = 1.4rem
-$btn-font-size = 0.9rem
-$btn-font-size-icons = 1.1rem
-$btn-min-width = 6.5rem
-$btn-width = minmax(auto, max-content)
-
-@import './helpers.styl'
-@import './colors.styl'
-@import './ui.styl'
-@import './mx.styl'
-@import './tables.styl'
-@import './checkbox.styl'
-@import './context_menu.styl'
+// compiles all modules into index.css
+@import './_variables.styl'
+@import './_helpers.styl'
+@import './_ui.styl'
+@import './_mx.styl'
+@import './_tables.styl'
+@import './_checkbox.styl'
+@import './_context_menu.styl'
+@import './_popup.styl'
