--- a/synergy/mx/templates/block_time_window_selector.html
+++ b/synergy/mx/templates/block_time_window_selector.html
@@ -28,23 +28,19 @@
         <div class="include">
             <label for="include">show</label>
             <div id="include" class="inline">
-                <label class="inline"><input type="checkbox" name="include_running" id="include_running"
-                        {{ running_checked }} />
+                <label class="inline"><input type="checkbox" name="include_running" id="include_running" {{ running_checked }} />
                     <span class="label-body">running</span>
                 </label>
-                <label class="inline"><input type="checkbox" name="include_processed" id="include_processed"
-                        {{ processed_checked }} />
+                <label class="inline"><input type="checkbox" name="include_processed" id="include_processed" {{ processed_checked }} />
                     <span class="label-body">processed</span>
                 </label>
                 <label class="inline"><input type="checkbox" name="include_noop" id="include_noop" {{ noop_checked }} />
                     <span class="label-body">noop</span>
                 </label>
-                <label class="inline"><input type="checkbox" name="include_failed" id="include_failed"
-                        {{ failed_checked }} />
+                <label class="inline"><input type="checkbox" name="include_failed" id="include_failed" {{ failed_checked }} />
                     <span class="label-body">failed</span>
                 </label>
-                <label class="inline"><input type="checkbox" name="include_disabled" id="include_disabled"
-                        {{ disabled_checked }} />
+                <label class="inline"><input type="checkbox" name="include_disabled" id="include_disabled" {{ disabled_checked }} />
                     <span class="label-body">disabled</span>
                 </label>
             </div>
